# NEngine

./: CMakeCache.txt  CMakeLists.txt  NEngine.aps  NEngine.cpp  NEngine.h  NEngine.sln  NEngine.vcxproj  NEngine.vcxproj.filters  dot.cpp  dot.h  main.cpp  models.cpp  models.h  poly.cpp  poly.h  ray.cpp  ray.h  resource.h  screen.cpp  screen.h
Debug/: NEngine.ilk  vc141.idb  vc142.idb
Debug/NEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
NEngine.xcodeproj/: project.pbxproj
NEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NEngine.xcodeproj/project.xcworkspace/xcuserdata/vladimir.xcuserdatad/: UserInterfaceState.xcuserstate
NEngine.xcodeproj/xcuserdata/vladimir.xcuserdatad/xcschemes/: xcschememanagement.plist
x64/: Debug.g
x64/Debug/: NEngine.ilk  vc142.idb
x64/Debug/NEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
